--- a/CarRecorder/res/values/strings.xml
+++ b/CarRecorder/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">CarRecorder</string>
+    <string name="app_name">行车记录仪</string>
     <string name="hello_world">Hello world!</string>
 
 </resources>
