--- a/CarRecorder/res/values/strings.xml
+++ b/CarRecorder/res/values/strings.xml
@@ -3,5 +3,9 @@
 
     <string name="app_name">行车记录仪</string>
     <string name="hello_world">Hello world!</string>
+    <string name="menu_settings">Settings</string>
+    <string name="title_alert">提示信息</string>
+    <string name="ok">确定</string>
+    <string name="cancel">取消</string>
 
 </resources>
